<resources>
    <string name="app_name">Meow</string>

    <!-- Tag Group -->
    <string name="add_tag">Add Tag</string>

    <string name="drawer_main">Home</string>
    <string name="empty_for_search">keyword cannot be empty</string>
    <string name="favorite">Favorite</string>
    <string name="download">Download</string>
    <string name="drawer_history">History</string>
    <string name="drawer_about">About</string>
    <string name="item_group_other">Other</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_source">Source</string>
    <string name="search_result_title">Result-%s</string>
    <string name="snackbar_result_empty">Result is empty</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_default_reader_mode">Default reader mode</string>
    <string name="pref_hide_reader_status">Hide reader information</string>
    <string name="pref_reader_settings">Reader settings</string>
    <string name="pref_reader_mode_default">Default</string>
    <string name="pref_reader_mode_page">Page mode</string>
    <string name="pref_reader_mode_stream">Scroll mode</string>
    <string name="about_update">Check update</string>
    <string name="about_update_summary">Click to check update</string>
    <string name="about_resource">Source code</string>
    <string name="about_resource_url">https://github.com/ReChinX/Meow</string>
    <string name="string_manga_statu_ongoing">Ongoing</string>
    <string name="string_manga_statu_completed">Completed</string>
    <string name="string_manga_statu_unknown">Unknown</string>
    <string name="transition_finished">Finished:</string>
    <string name="transition_current">Current:</string>
    <string name="transition_next">Next:</string>
    <string name="transition_previous">Previous:</string>
    <string name="transition_no_next">There\'s no next chapter</string>
    <string name="transition_no_previous">There\'s no previous chapter</string>
    <string name="transition_pages_loading">Loading pages…</string>
    <string name="transition_pages_error">Failed to load pages: %1$s</string>
    <string name="action_retry">Retry</string>
    <string name="default_viewer">Default</string>
    <string name="left_to_right_viewer">Left to right</string>
    <string name="right_to_left_viewer">Right to left</string>
    <string name="webtoon_viewer">Webtoon</string>
    <string name="setting_sheet_select_viewer">Selecting viewer </string>
    <string name="setting_sheet_category_general">General</string>
    <string name="label_settings">Settings</string>
    <string name="unknown">Unknown</string>
    <string name="detail_manga_info_author">Author</string>
    <string name="detail_manga_info_date_updated">Updated time</string>
    <string name="detail_manga_info_date_loading">Loading</string>
    <string name="detail_manga_info_status">Status</string>
    <string name="detail_manga_information">Information</string>
    <string name="detail_chapters">Chapters</string>
    <string name="detail_empty_chapter">Empty chapter</string>
    <string name="title_search_filter">Search Filter</string>
    <string name="text_chapter_load_more">load more chapters</string>
    <string name="action_download">download</string>
    <string name="chapter_downloading_progress">Downloading (%1$d/%2$d)</string>
    <string name="chapter_paused">Paused</string>
    <string name="download_notifier_download_paused">Download paused</string>
    <string name="action_resume">Resume</string>
    <string name="action_clear">Clear</string>
    <string name="update_check_notification_download_complete">Download complete</string>
    <string name="download_notifier_downloader_title">Downloader</string>
    <string name="download_notifier_unkown_error">An unexpected error occurred while downloading chapter</string>
    <string name="channel_common">Common</string>
    <string name="channel_library">Library</string>
    <string name="channel_downloader">Downloader</string>
    <string name="download_queue_error">An error occurred while downloading chapters. You can try again in the downloads section</string>
    <string name="download_notifier_text_only_wifi">No wifi connection available</string>
    <string name="download_notifier_no_network" translatable="false">No network connection available</string>
    <string name="tab_download_complete">DownloadCompleted</string>
    <string name="tab_download_queue">DownloadQueue</string>
    <string name="task_parse">Parsing</string>
    <string name="task_pause">Pausing</string>
    <string name="task_wait">Waiting</string>
    <string name="task_dowloading">Downloading</string>
    <string name="task_finish">Finished</string>
    <string name="task_error">Error</string>
    <string name="title_activity_detail">Detail</string>
    <string name="title_activity_task">Task</string>
    <string name="label_delete">Delete</string>
    <string name="label_select_all">Select All</string>
    <string name="message_delete_success">Deleted success</string>
    <string name="label_pause_all">Pause All</string>
    <string name="label_play_all">Start All</string>
    <string name="drawer_extension">Extension</string>
    <string name="dialog_preview">Preview</string>
    <string name="pref_full_screen">Full screen read</string>
    <string name="pref_page_transitions">Page transitions</string>
    <string name="pref_allow_volume_keys">Allow volume keys</string>
    <string name="setting_sheet_hide_info">Hide reader infomation</string>
    <string name="setting_sheet_category_page">Pager</string>
    <string name="setting_sheet_category_webtoon">Webtoon</string>
    <string name="setting_sheet_fullscreen">Fullscreen</string>
    <string name="pref_download">Download</string>
    <string name="pref_download_directory">Download directory</string>
    <string name="pref_theme_settings">Theme setting</string>
    <string name="filter_reset">reset</string>
    <string name="filter_search">search</string>
    <string name="title_activity_theme">Theme style</string>
    <string name="color_pink">Pink</string>
    <string name="color_blue">Blue</string>
    <string name="color_black">Black</string>
    <string name="color_purple">Purple</string>
    <string name="color_green">Green</string>
    <string name="color_yellow">Yellow</string>
    <string name="color_orange">Orange</string>
    <string name="color_red">Red</string>
    <string name="drawer_palette">Theme</string>
    <string name="color_green_light">Green Light</string>
    <string name="global_search_hint">Global Search</string>
    <string name="specific_search_hint">Search %s</string>

</resources>
