<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/layoutView"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <include layout="@layout/custom_toolbar"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="?attr/colorPrimary">
            <TextView
                android:id="@+id/appName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="10dp"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="54sp"/>
            <TextView
                android:id="@+id/versionName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/appName"
                android:layout_centerHorizontal="true"
                android:textColor="@color/white"
                android:textSize="14sp"/>
        </RelativeLayout>
        <LinearLayout
            android:id="@+id/update"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="16dp"
            android:clickable="true"
            android:background="?android:attr/selectableItemBackground">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="16sp"
                android:text="@string/about_update"/>
            <TextView
                android:id="@+id/updateSummary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="2dp"
                android:textSize="14sp"
                android:text="@string/about_update_summary"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/resourceBtn"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="16dp"
            android:clickable="true"
            android:background="?android:attr/selectableItemBackground">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="16sp"
                android:text="@string/about_resource"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="2dp"
                android:textSize="14sp"
                android:text="@string/about_resource_url"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>